--- a/src/template/index.pug
+++ b/src/template/index.pug
@@ -6,18 +6,18 @@ html(lang='en')
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		// link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css")
 		link(rel="stylesheet", href="assets/styles/main.css")
-		script(async, src="assets/scripts/app.js")
 	body
 		h1 Simple modal  
 			a.link(href="#", data-target="modal") Modal  
-			a.link(href="#", data-target="modal2") Modal2
-		.modal.mod1(data-title='modal')
+			a.link(href="#", data-target="modals") Modals 
+		.modal.mod(data-title='modal')
 			.modal-body
 				.modal-container.shadowBox
 					span.close X
 					h1 Modal 1
-		.modal.mod(data-title='modal2')
+		.modal.modals(data-title='modals')
 			.modal-body
 				.modal-container.shadowBox
 					span.close X
-					h1 Modal 2
+					h1 Modals
+		script(src="assets/scripts/app.js")
