--- a/src/template/index.pug
+++ b/src/template/index.pug
@@ -10,12 +10,12 @@ html(lang='en')
 		h1 Simple modal  
 			a.link(href="#", data-target="modal") Modal  
 			a.link(href="#", data-target="modals") Modals 
-		.modal.mod(data-title='modal')
+		#modal1.modal(data-title='modal')
 			.modal-body
 				.modal-container.shadowBox
 					span.close X
 					h1 Modal 1
-		.modal.modals(data-title='modals')
+		#modal.modal(data-title='modals')
 			.modal-body
 				.modal-container.shadowBox
 					span.close X
