--- a/src/assets/styles/main.sass
+++ b/src/assets/styles/main.sass
@@ -24,6 +24,7 @@ body
   position: relative
   width: 100%
   height: 100%
+
 .modal-container
   max-width: 1200px
   background: #fff
@@ -32,6 +33,9 @@ body
   top: 50%
   left: 50%
   transform: translate(-50%,-50%)
+  &.full-size
+    min-width: 100%
+    height: 100%
   &::after
     content: ""
     display: table
@@ -63,3 +67,8 @@ body
     transform: scale(1.2)
     color: #333
     border-color: #333
+.full-size
+  background: #ececec
+  .close
+    top: 25px
+    right: 25px
