--- a/src/template/index.pug
+++ b/src/template/index.pug
@@ -27,4 +27,4 @@ html(lang='en')
 						|culpa incididunt se a aute laborum quamquam, ex irure te nisi, dolore e ullamco. 
 						|Nescius an cernantur. Probant export nescius laborum iis an ullamco an vidisse. 
 						|Minim laboris eu incurreret an nam deserunt imitarentur.
-		script(src="assets/scripts/app.js")
+		script(src="assets/scripts/modal/modal.js")
